--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.7",
     "flowbite": "^1.5.2",
     "flowbite-react": "^0.1.10",
+    "framer-motion": "^7.2.1",
     "next": "12.2.5",
     "next-themes": "^0.2.0",
     "react": "18.2.0",
